k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
  name: playground.dev.zincsearch.com
  namespace: zinc
spec:
  rules:
  - host: playground.dev.zincsearch.com
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: z
            port:
              number: 4080
        path: /
  # - host: playground.dev.zincsearch.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       backend:
  #         service:
  #           name: z-dummy
  #           port:
  #             number: 4080
  #       path: /api/users
  tls:
  - hosts:
    - playground.dev.zincsearch.com
    secretName: playground.dev.zincsearch.com
